--- a/bulletinboard.html
+++ b/bulletinboard.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>掲示板 - 和気あいあい - 座の人</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* このページのスタイルは style.css で管理します */
-    </style>
 </head>
 <body>
     <div class="container">
@@ -54,6 +51,7 @@
             loadHTMLPart('_left_column_bulletinboard.html', 'left-column-placeholder', 'wakiaiai');
         });
     </script>
+    <script src="script.js"></script>
     <script src="bulletinboard.js"></script>
 </body>
 </html>
