--- a/_left_column_logged_in.html
+++ b/_left_column_logged_in.html
@@ -1,10 +1,15 @@
 <!-- _left_column_logged_in.html -->
 <aside class="left-column-logged-in">
+    <div class="left-column-user-profile-link-container">
+        <a href="profile.html" id="left-column-profile-link">
+            <img src="default_user_thumb.png" alt="ユーザー画像" id="left-column-user-image" class="left-column-avatar">
+            <span id="left-column-username-text" class="left-column-username-label">（ユーザー名）</span>
+        </a>
+    </div>
     <ul>
-        <li><a href="profile.html" id="left-column-username">（ユーザー名）</a></li>
-        <li><a href="notifications.html">通知</a></li>
-        <li><a href="#">随筆を書く</a></li>
-        <li><a href="#">過去の随筆</a></li>
+        <li><a href="notifications.html">一目瞭然</a></li>
+        <li><a href="create_essay.html">随筆を書く</a></li>
+        <li><a href="past_essays.html">過去の随筆</a></li>
         <li class="following-section-header">
             刮目中の人
             <ul id="following-list-left-column">
