--- a/create_essay.html
+++ b/create_essay.html
@@ -7,144 +7,67 @@
     <link rel="stylesheet" href="style.css">
     <style>
         /* このページ専用のスタイル */
-        .main-content-form { /* style.cssでflex-grow:1が設定される想定 */
-            padding: 20px; /* このエリアの内側の余白 */
-            background-color: #fff; /* 必要であれば背景色を設定 */
-        }
-        .editor-form-inner { /* フォーム要素をグループ化し、最大幅を設定 */
-            max-width: 800px; /* フォーム自体の最大幅 */
-            margin: 0 auto;   /* フォームを中央寄せ */
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-        }
-        .form-group input[type="text"],
-        .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        .form-group textarea#essay-content {
-            min-height: 300px;
-            resize: vertical;
-        }
-        .form-group input[type="file"] {
-            display: block;
-            margin-top: 5px;
-        }
-        .preview-area {
-            margin-top: 10px;
-            border: 1px dashed #ccc;
-            padding: 10px;
-            min-height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-        .preview-area img,
-        .preview-area video { /* videoプレビューは現在使っていないが念のため残す */
-            max-width: 100%;
-            max-height: 300px;
-            height: auto;
-            display: block;
-            margin-bottom: 10px;
-        }
-        .preview-area p { color: #777; }
-        .submit-button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            display: block;
-            margin: 20px auto 0 auto;
-        }
-        .submit-button:hover {
-            background-color: #0056b3;
-        }
+        .main-content-form { padding: 20px; background-color: #fff; }
+        .editor-form-inner { max-width: 800px; margin: 0 auto; }
+        .form-group { margin-bottom: 20px; }
+        .form-group label { display: block; margin-bottom: 8px; font-weight: bold; }
+        .form-group input[type="text"], .form-group textarea { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+        .form-group textarea#essay-content { min-height: 300px; resize: vertical; }
+        .form-group input[type="file"] { display: block; margin-top: 5px; }
+        .preview-area { margin-top: 10px; border: 1px dashed #ccc; padding: 10px; min-height: 50px; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #f9f9f9; }
+        .preview-area img, .preview-area video { max-width: 100%; max-height: 300px; height: auto; display: block; margin-bottom: 10px; border:1px solid #eee; }
+        .preview-area p.empty-preview-text { color: #aaa; font-style: italic; }
+        .submit-button { background-color: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; display: block; margin: 20px auto 0 auto; }
+        .submit-button:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>座の人</h1>
-            <nav>
-                <ul>
-                    <li><a href="logged_in.html">ホーム</a></li>
-                    <li><a href="bulletinboard.html">掲示板</a></li>
-                </ul>
-            </nav>
+            <nav><ul><li><a href="logged_in.html">ホーム</a></li><li><a href="bulletinboard.html">掲示板</a></li></ul></nav>
         </header>
-
         <main>
             <div id="left-column-container">
                 <!-- _left_column_logged_in.html が読み込まれる -->
             </div>
 
-            <div class="main-content-form"> <!-- 右側メインコンテンツエリア -->
-                <div class="editor-form-inner"> <!-- フォームコンテンツのラッパー -->
+            <div class="main-content-form">
+                <div class="editor-form-inner">
                     <h2>随筆を執筆する</h2>
                     <form id="essay-form">
                         <div class="form-group">
                             <label for="essay-title">タイトル:</label>
                             <input type="text" id="essay-title" name="essay-title" required>
                         </div>
-
                         <div class="form-group">
                             <label for="essay-content">本文:</label>
                             <textarea id="essay-content" name="essay-content" required></textarea>
                         </div>
-
                         <div class="form-group">
-                            <label for="essay-media">メディアファイルを選択 (画像のみ, 任意):</label>
-                            <input type="file" id="essay-media" name="essay-media" accept="image/*">
+                            <label for="essay-media">メディアファイルを選択 (画像または動画, 任意):</label>
+                            <input type="file" id="essay-media" name="essay-media" accept="image/*,video/*"> 
                             <div class="preview-area" id="media-preview-area">
-                                <p>画像プレビュー</p>
+                                <p class="empty-preview-text">イメージ</p>  
                             </div>
                         </div>
-
                         <button type="submit" class="submit-button">投稿する</button>
                     </form>
-                </div> <!-- /.editor-form-inner -->
-            </div> <!-- /.main-content-form -->
+                </div>
+            </div>
         </main>
-
-        <footer>
-            <p>© 2025 座の人</p>
-        </footer>
+        <footer><p>© 2025 座の人</p></footer>
     </div>
-
     <script src="load_parts.js"></script>
     <script src="script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // console.log("DOMContentLoaded for create_essay.html inline script."); // デバッグ用
             if (typeof loadHTMLPart === 'function') {
-                // console.log("Calling loadHTMLPart for _left_column_logged_in.html on create_essay.html..."); // デバッグ用
                 loadHTMLPart('_left_column_logged_in.html', 'left-column-container', null, () => {
-                    // console.log("CALLBACK: Left column loaded into create_essay.html."); // デバッグ用
-                    if (typeof initializeLeftColumnContent === "function") {
-                        // console.log("CALLBACK: Calling initializeLeftColumnContent for create_essay.html..."); // デバッグ用
-                        initializeLeftColumnContent();
-                    }
-                    if (typeof initializeCreateEssayPage === "function") { // このページ専用のJS初期化
-                        // console.log("CALLBACK: Calling initializeCreateEssayPage..."); // デバッグ用
-                        initializeCreateEssayPage();
-                    }
+                    if (typeof initializeLeftColumnContent === "function") { initializeLeftColumnContent(); }
+                    if (typeof initializeCreateEssayPage === "function") { initializeCreateEssayPage(); }
                 });
-            } else {
-                console.error("loadHTMLPart function is not defined on create_essay.html.");
-            }
+            } else { console.error("loadHTMLPart function is not defined on create_essay.html."); }
         });
     </script>
 </body>
